Adicionando schema e routes de Questions
