# api/src/schemas/question.js
@@ -1,0 +1,8 @@
+const mongoose = require('mongoose');
+
+const questionSchema = new mongoose.Schema({
+  title: String,
+  alternatives: Array
+});
+
+module.exports = mongoose.model('question', questionSchema);
